--- a/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.tex
+++ b/src/main/resources/informe-LaTex/QSim_Molinari_Rosito.tex
@@ -2,10 +2,15 @@
 \usepackage{Qsim}
 
 \author{\susi \and \tati}
-\title{\qsim: Simulador de arquitecturas Q}
+\title{\includegraphics[width=4cm]{logoQSim.png}\\Simulador de Arquitecturas Q}
 
 
-\pagestyle	{fancy}
+\pagestyle{fancy}
+\fancyhead{} % limpio la cabecera
+\fancyhead[R]{\nouppercase{\rightmark}}
+\fancyhead[L]{\nouppercase{\leftmark}}
+\fancyfoot[R]{\includegraphics[width=2cm]{logoQSim.png}}
+
 \begin{document}
 \maketitle
 
