--- a/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
+++ b/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
@@ -14,7 +14,7 @@ Tuvieron que ser solicitadas además extensiones al equipo de desarrolladores de
 
 \begin{itemize}
 \item FileSelector para que los alumnos puedan cargar el archivo .Qsim en el cual se encuentra su programa
-\item CodeEditor (O actualmente llamado KeywordTextArea). Es el espacio donde se visualiza el programa QUARQ que realizaron los alumnos una vez que esta cargado.
+\item CodeEditor (O actualmente llamado KeywordTextArea). Es el espacio donde se visualiza el programa Qi que realizaron los alumnos una vez que esta cargado.
 \item Bindings contra el background de componentes y celdas de una tabla, para permitir la visualizacion de cambios de colores en la memoria luego de las etapas de ejecución y de realizar algun cambio en la misma.
 \item TexBox multiLine (TextArea) con scroll para ser utilizado como consola de devolucion.
 \item Icono para la aplicacion, solo por cuestiones estéticas.
