modifique contexto arreglos de Mara

--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -49,17 +49,17 @@ Durante la \DI, la \UC\ determina que \ojo{significa la cadena binaria. Finalmen
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Estado del arte}
 
-\ojo{En un principio la materia \orga\ eligió el simulador intel 8085 para enseniar assembler.}{A través de los años de la carreta \tpi, en la materia \orga\ se analizaron distintos enfoques y herramientas para desarrollar los conceptos relacionados a la ejecución de programas en una computadora.}\\
+A través de los años de la carreta \tpi, en la materia \orga\ se analizaron distintos enfoques y herramientas para desarrollar los conceptos relacionados a la ejecución de programas en una computadora.\\
 
-\ojo{Simulador intel 8085: Es un simulador y ensamblador para el microprocesador Intel 8085, que ofrece una interfas que a simple vista es difícil de entender, una parte para la ejecución y otra parte para ver el estado de la memoria y registros. }{Inicialmente se utilizó un simulador de código abierto para la arquitectura Intel 8085, que ofrecía una funcionalidad bastante completa, pero una interfaz que no resultaba del todo intuitiva.}
-\ojo{Las opiniones y experiencias con este simulador dentro de la materia no fueron muy buenas, fuera del gran esfuerzo que pusieron los profesores en que aprendieramos, dandonos mini tutoriales no resultaron como se esperaba. Todo lo que se trabajaba en ese simulador tambien se escribia a en hoja. }{Este simulador se eligió por tratarse de un lenguaje assembler mas reducido, con un repertorio de instrucciones y modos de direccionamiento mas pequeño que contaba con un entorno de prueba (el simulador propiamente dicho) para facilitar la didáctica de la programación en lenguaje ensamblador, pero posteriormente se entendió que las características de la arquitectura no eran las adecuadas para la enseñanza de los contenidos y se descartó.}\\
+Inicialmente se utilizó un simulador de código abierto para la arquitectura Intel 8085, que ofrecía una funcionalidad bastante completa, pero una interfaz que no resultaba del todo intuitiva.
+Este simulador se eligió por tratarse de un lenguaje assembler mas reducido, con un repertorio de instrucciones y modos de direccionamiento mas pequeño que contaba con un entorno de prueba (el simulador propiamente dicho) para facilitar la didáctica de la programación en lenguaje ensamblador, pero posteriormente se entendió que las características de la arquitectura no eran las adecuadas para la enseñanza de los contenidos y se descartó.\\
  
-\ojo{En los primeros cuatrimeste la materia eligio incorporar la \textbf{Arquitectura QARQ} con su especificación y ademas un lenguaje microcódigo. En estos tiempos se desistio en utilizar un simulador complejo pero no dejaron de buscar e investigar alguna alternativa que pueda convivir con los estudantes. Todos los ejercicios se hacian en papel, la unica forma de verificar resultados es atraves de los profesores.}{Entonces el equipo docente eligió definir una arquitectura teórica que proveyera solamente lo necesario para cumplir con los objetivos de la materia e inspirados en un caso similar de la Universodad de Buenos Aires, se definió la arquitectura \textbf{QARQ}, muy similar a la que se presenta en la sección \ref{apendiceQ}}\\
+Entonces el equipo docente eligió definir una arquitectura teórica que proveyera solamente lo necesario para cumplir con los objetivos de la materia e inspirados en un caso similar de la Universodad de Buenos Aires, se definió la arquitectura \textbf{QARQ}, muy similar a la que se presenta en la sección \ref{apendiceQ}\\
 
 
-\ojo{Hace poco la materia o mejor dicho el equipo de Orga decidio dividir} {Posteriormente, el equipo docente propuso un cambio en la secuencia didáctica que requirió la división de } la especificacion de la arquitectura QARQ en varias partes, donde cada una recibe el nombre de \textbf{Arquitectura Qi} y agrega una nueva funcionalidad (instrucciones o modos de direccionamientos) a la versión anterior, son como capas de cebolla. \ojo{Ademas incorporaron un trabajo practico donde tiene que programar un programa que monocromatice una image en la \textbf{Arquitectura IA - 32}. En el enunciado se explica bastante como funciona esta arquitectura. }{no lo pondría}Sin embargo todos los ejercicios de las arquitecturas Qi se siguen haciendo en papel. \\
+Posteriormente, el equipo docente propuso un cambio en la secuencia didáctica que requirió la división de la especificacion de la arquitectura QARQ en varias partes, donde cada una recibe el nombre de \textbf{Arquitectura Qi} y agrega una nueva funcionalidad (instrucciones o modos de direccionamientos) a la versión anterior, son como capas de cebolla. Sin embargo todos los ejercicios de las arquitecturas Qi se siguen haciendo en papel. \\
 
-Actualmente se busca incorporar el \textbf{Simulador Qsim} en la materia \ojo{para que los chicos puedan entender el}{con el objetivo de que los alumnos puedan visualizar  el funcionamiento de una computadora al mas mínimo detalle, a través de la ejercitación del}  \ciclo\ \ojo{en la etapa de ejecucion de un programa}{??}, y chequear el efecto de los programas creados.
+Actualmente se busca incorporar el \textbf{Simulador Qsim} en la materia con el objetivo de que los alumnos puedan visualizar el funcionamiento de una computadora al mas mínimo detalle, a través de la ejercitación del \ciclo\ \ojo{en la etapa de ejecucion de un programa}{??}, y chequear el efecto de los programas creados.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Arquitecturas Q (Susi)}
