--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -61,7 +61,7 @@ Entonces el equipo docente eligió definir una arquitectura teórica que proveye
 
 Posteriormente, el equipo docente propuso un cambio en la secuencia didáctica que requirió la división de la especificacion de la arquitectura QARQ en varias partes, donde cada una recibe el nombre de \textbf{Arquitectura Qi} y agrega una nueva funcionalidad (instrucciones o modos de direccionamientos) a la versión anterior, son como capas de cebolla. Sin embargo todos los ejercicios de las arquitecturas Qi se siguen haciendo en papel. \\
 
-Actualmente se busca incorporar el \textbf{Simulador Qsim} en la materia con el objetivo de que los alumnos puedan visualizar el funcionamiento de una computadora al mas mínimo detalle, a través de la ejercitación del \ciclo\ \ojo{en la etapa de ejecucion de un programa}{No se que quise poner estaba muy quedama ayer. Ya te lo cambio??}, y chequear el efecto de los programas creados.
+Actualmente se busca incorporar el \textbf{Simulador Qsim} en la materia con el objetivo de que los alumnos puedan visualizar el funcionamiento de una computadora al mas mínimo detalle, a través de la ejercitación del \ciclo.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Arquitecturas Q (Susi)}
