--- a/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
+++ b/src/main/resources/informe-LaTex/evaluacion-desarrollo.tex
@@ -179,7 +179,7 @@ En la linea numero 1 el operando destino el numero del registro es invalido\foot
 
 "Ha ocurrido un error en la linea 1: AND R2, R8" \\ 
 
-\item Este es un error de concepto que se les puede escapar a los alumnos, que pasa si un alumno escribe el siguiente programa Qi:\\
+\item Este es un error de concepto que se le puede escapar a los alumnos, que pasa si un alumno escribe el siguiente programa Qi:\\
 
 1.MUL R7, R4 \\
 2.AND R5, [R3] \\
@@ -188,7 +188,131 @@ En la linea numero 1 cuando uno escribe la instruccion MUL no es valido utilizar
 
 "Ha ocurrido un error en la linea 1: MUL R7, R4" \\ 
 
+\item Este es otro error que se les puede escapar a los alumnos, que pasa si un alumno escribe el siguiente programa Qi:\\
+
+1.inicio: MUL R7, R4 \\
+2.AND R5, [R3] \\
+3.JMP incio \\
+
+En la linea numero 3 cuando uno escribe una instruccion utilizando etiquetas no es correcto escribir el nombre incompleto de la etiqueta, por eso es invalido. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibira el error descriptivo como el siguiente:
+
+"Ha ocurrido un error en la linea 3: JMP incio" \\ 
+
+\item Otro error con etiquetas, que pasa si un alumno escribe el siguiente programa Qi:\\
+
+1.MOV [0x0005], etiq \\
+2.CALL [0x0005] \\
+3.etiqueta: ADD R0, 0x0002 \\
+
+En la linea numero 1 ocurre el mismo error antes mencionado donde el nombre de la etiqueta esta incompleto, esta situacion es distinta ya que en la anterior uno define primero la etiqueta y luego se utiliza, aca es alreves primero se utiliza en la linea 1 y luego se define en la linea 3. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibira el error descriptivo como el siguiente:
+
+"Ha ocurrido un error en la linea 1: MOV [0x0005], etiq" \\
+
+
+\item Relacionado con las etiquetas puede pasa que se olviden de algun simbolo, que pasa si un alumno escribe el siguiente programa Qi:\\
+
+1.inicio SUB [0x9000], R4 \\
+2.MUL R5, [R7] \\
+3.JMP inicio \\
+
+En la linea numero 1 la etiqueta inicio no es una etiqueta valida\footnote{Las etiquetas pueden empezar con mayuscula o minuscula pero al final siempre tienen que tenen (:).}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibira el error descriptivo como el siguiente:
+
+"Ha ocurrido un error en la linea 1: inicio SUB [0x9000], R4" \\ 
+
+
+\item Esto es un error de concepto, que pasa si un alumno escribe el siguiente programa Qi :\\
+
+1.ADD [0x9000], R4 \\
+2.NOT 0x0004 \\
+
+En la linea numero 2 el operando destino de la instruccion NOT no puede ser un inmediato, esto es invalido\footnote{La instruccion NOT no puede recibir un inmediato como destino porque necesita guardar el efecto que genera y un inmediato es una constante.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibira el error descriptivo como el siguiente:
+
+"Ha ocurrido un error en la linea 2: NOT 0x0004" \\ 
+
+\item Esto es un error que se les puede escarpar, que pasa si un alumno escribe el siguiente programa Qi :\\
+
+1.ADD [9000], R4 \\
+2.NOT R2 \\
+
+En la linea numero 1 el operando destino no tiene el prefijo 0x por lo tanto es una expresion invalida. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibira el error descriptivo como el siguiente:
+
+"Ha ocurrido un error en la linea 1: ADD [0009], R4" \\ 
+
+\item Una cosa interesante puede ocurrir que pasa si un alumno escribe el siguiente programa Qi :\\
+
+1.ADD [0x900000000000], R4 \\
+2.NOT R2 \\
+
+En la linea numero 1 el operando destino tiene mas digitos que los permitidos, por esto es invalido\footnote{Un inmediato tiene el prefijo 0x y luego 4 digitos hexadecimales.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibira el error descriptivo como el siguiente:
+
+"Ha ocurrido un error en la linea 1: ADD [0x900000000000], R4" \\ 
+
+\item Esto es un error que se les puede escarpar, que pasa si un alumno escribe el siguiente programa Qi  :\\
+
+1.ZDD [0x900000000000], [R5] \\
+2.NOT R2 \\
+
+En la linea numero 1 el nombre de la operacion es invalida\footnote{Ese nombre es invalido porque no es parte del conjunto de instrucciones, no existe la instruccion ZDD.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibira el error descriptivo como el siguiente:
+
+"Ha ocurrido un error en la linea 1: ZDD [0x900000000000], R4" \\
+
+\item Este error no es tan habitual, que pasa si un alumno escribe el siguiente programa Qi  :\\
+
+1.SUB [], 0x000A \\
+
+En la linea numero 1 el operando destino no contiene su valor, por eso es invalido\footnote{El modo de direccionamiento directo siempre contiene un inmediato como valor.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibira el error descriptivo como el siguiente:
+
+"Ha ocurrido un error en la linea 1: SUB [], 0x000A" \\
+
+\item otro error no tan habitual, que pasa si un alumno escribe el siguiente programa Qi  :\\
+
+1.JMP \\
+
+En la linea numero 1 el operando origen de la instruccion JMP no existe y por ende es invalido\footnote{Todas las instrucciones son validas si tienen a su operandos, en este caso JMP le falta su operando.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibira el error descriptivo como el siguiente:
+
+"Ha ocurrido un error en la linea 1: JMP" \\
+ 
+\item otro error no tan habitual, que pasa si un alumno escribe el siguiente programa Qi  :\\
+
+1.ADD R7, [[]] \\
+
+En la linea numero 1 el valor el operando origen no existe, esto es invalido\footnote{El modo de direccionamiento indirecto necesita su valor inmediato.}. Cuando el alumno quiera ensamblar este programa, el ensamblador detectara este error y en la pantalla recibira el error descriptivo como el siguiente:
+
+"Ha ocurrido un error en la linea 1: ADD R7, [[]]" \\
+
 \end{itemize}
+
+\subsection{PARA EXPERIMENTAR}
+
+Esta seccion describe situaciones particulares que los alumnos pueden experimentar.
+
+\begin{itemize}
+
+\item Supongamos que un alumno escribe el siguiente programa Qi:
+
+1.ADD R0, [0x0002]\\
+2.MUL R4, 0x0001 \\
+3.SUB [0x0003], 0x000A \\
+4.MOV R5, 0x0056 \\
+5.MOV [0x0005], etiqueta \\
+6.CALL [0x0005] \\
+7.etiqueta: ADD R0, 0x0002 \\
+8.RET \\
+
+Lo interesante es que luego de ejecutar el CALL se ejecuta la instruccion ADD R0, 0x0002 y el RET. Cuando vuelve para ejecutar la proxima instruccion el PC se encuentra en la linea 7, donde vuelve a ejecutar la instruccion ADD antes mencionada. Ya lo ultimo que le queda es ejecutar el RET.
+Vamos a hacer un mapa del estado del registro SP antes de seguir: Antes de ejecutar el RET  el registro SP tiene el valor inicial que es FFEF, luego en la ejecucion lo primero que se hace es incrementar el SP osea que ahora tiene el valor FFFO y luego buscar el valor de esa direccion para actualizar el registro PC. Para informarles la direccion FFFO es un puerto de E/S. La conclucion es que en esta instancia el flujo de ejecucion del programa depende del valor que tiene ese puerto, puede pasar que el valor sea 0x0000 y se actualice el PC nos lleve al inicio de la memoria donde se encuentra inicializado otro programa y empiece a ejecutar desde alli. 
+
+
+\item Para los que son curiosos, supongamos que un alumno escribe el siguiente programa Qi:
+
+1.ADD R0, [0x0002]\\
+2.MUL R4, 0x0001 \\
+3.SUB [0x0003], 0x000A \\
+
+Pensemos que el PC se posiciona en la linea 3 y realizamos el ciclo de instruccion(FETCH - DECODE - EXECUTE). Como estado final tenemos el efecto de la ultima instruccion y el valor de PC apuntando a la siguiente instruccion a ejecutar. Como veran el programa que escribio el alumno termino en la la linea 3 pero el simulador no para de ejecutar, por ende te permite realizar las veces que quiera el ciclo de instruccion. Es re interesante que los chicos esperimenten este tipo de cosas.
+
+\end{itemize} 
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Trabajo Futuro}
