--- a/src/main/resources/informe-LaTex/arquitecturasQ.tex
+++ b/src/main/resources/informe-LaTex/arquitecturasQ.tex
@@ -40,13 +40,13 @@ Ejemplos:
 \item \textbf{[[0x000F]]} denota un operando cuyo valor se encuentra en la celda de memoria cuya dirección esta guardada como dato en la celda de memoria cuya dirección es \textbf{0x000F}
 \end{itemize}
 
-\item \textbf{Registro} Con este modo de direccionamiento se denota un operando alojado en un registro de uso general (R0 a R7)} La codificación de este modo se indica en la tabla \ref{tablamodos.
+\item \textbf{Registro} Con este modo de direccionamiento se denota un operando alojado en un registro de uso general (R0 a R7). La codificación de este modo se indica en la tabla \ref{tablamodos}.
 
 Ejemplos:
 \textbf{R0} denota un operando almacenado en el registro R0. 
 \textbf{R7} denota un operando almacenado en el registro R7.
 
-\item \textbf{RegistroIndirecto} De manera similar al modo indirecto, con este modo de direccionamiento se denota un operando alojado en una celda de memoria cuya dirección está almacenada en el registro indicado. La codificación de este modo se indica en la tabla \ref{tablamodos}.
+\item \textbf{Registro Indirecto} De manera similar al modo indirecto, con este modo de direccionamiento se denota un operando alojado en una celda de memoria cuya dirección está almacenada en el registro indicado. La codificación de este modo se indica en la tabla \ref{tablamodos}.
 
 
 Ejemplos:
