--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -2,6 +2,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Sobre la materia \orga (susi)}
 
+
+Si bien los conceptos fundamentales de la ejecución de programas son independientes de las arquitecturas de computadoras comerciales, es conveniente explicar los mismos dando un marco específico. Por otro lado, las diferentes arquitecturas que subyacen los numerosos modelos disponibles en el mercado, incluyen un basto conjunto de herramientas y recursos de lenguaje para el control del funcionamiento de una computadora, pero que agregan complejidad innecesaria a la comprensión de los conceptos funcionales y la didáctica de la materia.
+
+La propuesta de la asignatura \orga\ es utilizar la arquitectura \Q\, una arquitectura \textit{assembly-like} teórica (esto es, que no existe una computadora real que la implemente) basada en el modelo de ejecución de Von Neumann y cuya característica principal es la de ser minimalista y presentarse en 'capas'. Este enfoque permite ir incorporando los conceptos de manera gradual a partir de versiones escalonadas de la arquitectura, denominadas $Q_1$,$Q_2$,$Q_3$,$Q_4$, $Q_5$ y  $Q_6$
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conceptos importantes}
 
@@ -51,7 +56,7 @@ Durante la \DI, la \UC\ determina que operación se debe llevar a cabo, y finalm
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Estado del arte}
 
-A través de los años de la carreta \tpi, en la materia \orga\ se analizaron distintos enfoques y herramientas para desarrollar los conceptos relacionados a la ejecución de programas en una computadora.\\
+A través de los años de la carrera \tpi, en la materia \orga\ se analizaron distintos enfoques y herramientas para desarrollar los conceptos relacionados a la ejecución de programas en una computadora.\\
 
 Inicialmente se utilizó un simulador de código abierto para la arquitectura Intel 8085, que ofrecía una funcionalidad bastante completa, pero una interfaz que no resultaba del todo intuitiva.
 Este simulador se eligió por tratarse de un lenguaje assembler mas reducido, con un repertorio de instrucciones y modos de direccionamiento mas pequeño que contaba con un entorno de prueba (el simulador propiamente dicho) para facilitar la didáctica de la programación en lenguaje ensamblador, pero posteriormente se entendió que las características de la arquitectura no eran las adecuadas para la enseñanza de los contenidos y se descartó.\\
