--- a/src/main/resources/informe-LaTex/introduccion.tex
+++ b/src/main/resources/informe-LaTex/introduccion.tex
@@ -1,5 +1,8 @@
 %\chapter{Introducción}
 
 \begin{abstract}
+
+
+Una de las primeras asignaturas que debe recorrer un estudiante de la \tpi\ es \textbf{\orga}. En esta materia los estudiantes descubren los componentes funcionales que conforman un sistema de cómputos, con el fin de comprender un modelo de ejecución de programas que está presente hoy en día en la mayoría de las computadoras personales.
 Este trabajo...
 \end{abstract}
