--- a/src/main/resources/informe-LaTex/contexto.tex
+++ b/src/main/resources/informe-LaTex/contexto.tex
@@ -5,7 +5,10 @@
 
 Si bien los conceptos fundamentales de la ejecución de programas son independientes de las arquitecturas de computadoras comerciales, es conveniente explicar los mismos dando un marco específico. Por otro lado, las diferentes arquitecturas que subyacen los numerosos modelos disponibles en el mercado, incluyen un basto conjunto de herramientas y recursos de lenguaje para el control del funcionamiento de una computadora, pero que agregan complejidad innecesaria a la comprensión de los conceptos funcionales y la didáctica de la materia.
 
-La propuesta de la asignatura \orga\ es utilizar la arquitectura \Q\, una arquitectura \textit{assembly-like} teórica (esto es, que no existe una computadora real que la implemente) basada en el modelo de ejecución de Von Neumann y cuya característica principal es la de ser minimalista y presentarse en 'capas'. Este enfoque permite ir incorporando los conceptos de manera gradual a partir de versiones escalonadas de la arquitectura, denominadas $Q_1$,$Q_2$,$Q_3$,$Q_4$, $Q_5$ y  $Q_6$
+La propuesta de la asignatura \orga\ es utilizar la arquitectura \Q, una arquitectura \textit{assembly-like} teórica (esto es, que no existe una computadora real que la implemente) basada en el modelo de ejecución de Von Neumann y cuya característica principal es la de ser minimalista y presentarse en 'capas'. Este enfoque permite ir incorporando los conceptos de manera gradual a partir de versiones escalonadas de la arquitectura, denominadas $Q_1$, $Q_2$, $Q_3$, $Q_4$, $Q_5$ y  $Q_6$.\\
+
+
+Actualmente, la arquitectura se presenta a los estudiantes mediante especificaciones formales que deben analizar y comprender para utilizar el lenguaje de programación y resolver los problemas que se les plantean en la práctica. Entendemos que les resulta de gran utilidad incorporar una herramienta que les permita probar sus ejercicios de una manera automatizada y es por eso que se desarrolló un simulador para esta arquitectura.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conceptos importantes}
