--- a/src/main/resources/informe-LaTex/simulador.tex
+++ b/src/main/resources/informe-LaTex/simulador.tex
@@ -1,6 +1,8 @@
 \part{Simulador \qsim}
 
 
+El simulador desarrollado es una herramienta de utilización sencilla ya que se asume que los alumnos de esta materia están en la etapa inicial de la carrera y se pretende transmitir los conceptos sin distraerlos con detalles de uso y configuración.
+
 \section{Funcionalidad del simulador}
 
 La funcionalidad del simulador puede caracterizarse mediante las siguientes partes importantes:
